# Revisica

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: build-dmg.yml
agents/claude/: formula-cross-checker.json  math-adjudicator.json  math-claim-verifier.json  math-proof-reviewer.json  math-self-checker.json  notation-tracker.json  refine-eval-judge.json  writing-basic-reviewer.json  writing-judge.json  writing-self-checker.json  writing-structure-reviewer.json  writing-venue-reviewer.json
agents/codex/: findings.schema.json  formula-cross-checker.md  math-adjudicator.md  math-claim-verifier.md  math-proof-reviewer.md  math-self-checker.md  notation-tracker.md  refine-eval-judge.md  writing-basic-reviewer.md  writing-judge.md  writing-self-checker.md  writing-structure-reviewer.md  writing-venue-reviewer.md
benchmarks/math/: correct_integral.tex  proof_antiderivative_error.tex  wrong_average_value.tex
benchmarks/math_cases/: continuity_singularity.tex  manifest.json  wrong_integral.tex
benchmarks/refine/: chaotic-balanced-state.json  chaotic-balanced-state.md  coset-codes.json  coset-codes.md  inference-molecular.json  manifest_mini.json  targeting-interventions.md
benchmarks/refine_cases/: inference-molecular.md  manifest.json  targeting-interventions.json
benchmarks/reports/: 2026-04-07-refine-targeting-interventions.md  2026-04-12-processbench-math-agent.md
benchmarks/writing/: clean_draft.tex  manifest.json  venue_mismatch.tex
benchmarks/writing_cases/: grammar_typos.tex  structure_logic.tex
deep-research/: 2026-04-10-1015-python-desktop-app-packaging-macos.md  2026-04-10-1040-python-macos-desktop-app-approaches.md  2026-04-10-1042-python-agent-orchestration-frameworks.md  2026-04-13-0119-math-reasoning-benchmarks.md  2026-04-13-0119-math-reasoning-benchmarks.workspace.md
desktop/: README.md  electron-builder.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
docs/: architecture-refactor-todo.md  bugs.md  current-architecture.md  todo.md
docs/benchmark-reports/: 2026-04-07-refine-targeting-interventions.md
docs/decisions/: 0001-pdf-parser-mineru.md  0002-pyinstaller-onedir-python-backend.md  README.md
docs/learning/: 2026-04-07-focused-prompt-beats-whole-paper.md  2026-04-11-architecture-debt-observations.md  2026-04-11-dual-distribution-provider-mode.md  2026-04-11-refactor-lessons-desktop-app.md  2026-04-12-ingestion-parsers-design.md  2026-04-17-mineru-install-gotchas.md  2026-04-17-pdf-parser-mineru-decision.md  2026-04-17-wizard-patterns.md  README.md
docs/specs/: README.md  desktop-app.md  dmg-packaging.md  ingestion-parsers.md  proof-statement-checker.md
examples/: minimal_paper.tex
examples/targeting-interventions/: feedback-targeting-interventions-in-networks-2026-04-07.md  source-targeting-interventions-in-networks.md  source-targeting-interventions-in-networks.txt
scripts/: analyze_processbench.py  build-python-backend.sh  run_benchmark_suite.sh  smoke-test-python-backend.sh
scripts/pyinstaller/: python-backend.spec  python_backend_entry.py
tests/: test_extraction.py  test_image_api_endpoint.py  test_ingestion.py  test_ingestion_benchmark.py  test_mineru_image_capture.py  test_parsed_document_image_storage.py
(+1110 files in other folders)
