[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "revisica"
version = "0.1.0"
description = "Academic paper revision agent powered by Codex and Claude"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Zichao Yang" }
]
dependencies = [
  "sympy>=1.13,<2",
  "langgraph>=0.5",
  # pypdf: lightweight pure-Python page counter used in
  # ``MineruParser.parse`` before we decide whether to chunk.
  "pypdf>=4",
  # pypdfium2: the actual PDF page extractor for chunking. PDFium walks
  # the page resource graph and emits a properly-pruned sub-PDF — pypdf's
  # ``clone_from`` + ``del`` and ``add_page`` paths both produce
  # structurally broken chunks that trip mlx_vlm's BPE detokenizer on
  # large books (24 MB chunk vs 2 MB on DDIA). pypdfium2 is also already
  # what mineru itself uses to render pages, so chunks produced here
  # are guaranteed to round-trip through mineru's own pipeline.
  "pypdfium2>=4",
]

[project.optional-dependencies]
api = [
  "anthropic>=0.40",
  "openai>=1.50",
]
serve = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]
test = [
  "pytest>=7",
  "hypothesis>=6.80",
]
all = [
  "revisica[api,serve]",
]
# Extras used only when freezing the desktop DMG. Kept out of the regular
# dev installs so a normal `pip install .` does not drag in the ~40 MB
# pandoc binary wheel.
bundle = [
  "pypandoc-binary>=1.13",
]

[project.scripts]
revisica = "revisica.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
